# ZBStorage

./: .clang-format  CMakeLists.txt  qq  run.md  todo  分布式运行.md
.github/workflows/: ci.yaml
.report_tmp/: doc_extract.txt  midterm_test.docx  subject5_outline.docx  subject5_plan.docx  课题五20260424-yjy-copy.docx
deploy/multi_host/: README.md  cluster.env  cluster.local.env
deploy/multi_host/rendered/client/: client.env
deploy/multi_host/rendered/data/: data.env  real_node.conf  (+1 more)
deploy/multi_host/templates/: client.env.tpl  mds.conf.tpl  optical_node.conf.tpl  real_node.conf.tpl  scheduler.conf.tpl  virtual_node.conf.tpl
doc/: masstree_path_list_to_records.md  multi_host_deploy.md  subject5_midterm_progress_draft.md
doc/PE/: git 协作开发规范.md
scripts/: 60yi file.md  generate_masstree_template.sh  import_random_masstree_metadata.sh  random_read_6b_files.sh  run_demo_showcase.sh  run_import_1000yi_once.sh  start_demo_stack.sh
scripts/deploy/: check_cluster.sh  common_multi_host.sh  render_multi_host_configs.sh  run_demo_client.sh  start_client_fuse.sh  start_data_nodes.sh  start_mds.sh  start_scheduler.sh  stop_client_fuse.sh  stop_data_nodes.sh  stop_mds.sh  stop_scheduler.sh
src/mds/masstree_meta/: MasstreeBulkMetaGenerator.cpp  MasstreeBulkMetaGenerator.h  MasstreeImportService.cpp  MasstreeImportService.h  MasstreeManifest.cpp  MasstreeManifest.h
src/mds/service/: MdsServiceImpl.cpp
src/msg/: mds.proto  real_node.proto  storage_node_messages.h
src/sim/: CMakeLists.txt  SimCluster.cpp  SimCluster.h  SimFileIO.cpp  SimFileIO.h  SimStats.h  readme.md  sim_tool.cpp
src/sim/masstree/: SimMasstreeCodec.cpp  SimMasstreeCodec.h  SimMasstreeIndexRuntime.cpp  SimMasstreeIndexRuntime.h  SimMasstreeManifest.cpp  SimMasstreeManifest.h  SimMasstreeOpticalAllocator.cpp  SimMasstreeOpticalAllocator.h  SimMasstreePageLayout.cpp  SimMasstreePageLayout.h  SimMasstreeStore.cpp  SimMasstreeStore.h  SimMasstreeTypes.h
tools/: random_read_6b_files.cpp
tools/demo/: demo_menu.cpp  demo_params.cpp  demo_params.h  demo_result.cpp  system_demo_tool.cpp
tools/masstree/: masstree_meta_generate_tool.cpp  masstree_random_bulk_import_tool.cpp
(+17 files in other folders)
